Prelim plots running

--- a/R/FRRO2PoolUpdate.Rmd
+++ b/R/FRRO2PoolUpdate.Rmd
@@ -328,6 +328,7 @@ O2FRRfPool <- left_join(x = O2FRRfAll, y = ChloroDataAver, by = c("CultureID", c
 colnames(O2FRRfPool)
 ```
 
+XXX 6 Sept 2022
 ```{r ExWL blue JVPSII comparisons}
 
 O2FRRfPool %>%
